# domeos-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  linker.ld
src/: idt.rs  irq.rs  lib.rs  main.rs  vga.rs
src/boot/: boot.s  long_mode.s  multiboot.s
