[package]
name = "domeos"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]

[dependencies]
volatile = "0.2.4"
spin = "0.4"
x86_64 = "0.1.2"
cpuio = "0.2.0"

[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "spec.json"
output = "target/kernel.bin"
